refactor away MegaEvolution class